# CVerifier

./: .gitignore  CLEAN_BUILD_CACHE.md  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  问题解决.txt
.claude/: settings.local.json
configs/: aggressive.yaml  default.yaml
docs/: CLANG_INTEGRATION.md  DOCUMENTATION_STATUS.md  INSTALL.md  abstract-interpreter.md  architecture.md  clang-frontend.md  design.md  implementation-progress.md  plugin-api.md  requirements-addendum.md  requirements.md  roadmap.md  spec-language.md  verification-api.md  web-architecture.md  z3-integration.md
examples/: quick_start.c
include/cverifier/: AbstractInterpreter.h  Analyzer.h  CFG.h  ClangParser.h  Core.h  Frontend.h  LLIRFactory.h  LLIRModule.h  LLIRValue.h  LibClangParser.h  SymbolicExecutionEngine.h  SymbolicState.h  Utils.h  Z3Solver.h
plugins/example/: CMakeLists.txt  CustomChecker.cpp  CustomChecker.h
scripts/: build.sh
specs/: CMakeLists.txt  buffer.spec.c  verification.h
src/analyzer/AbstractInterpretation/: Interpreter.cpp
src/analyzer/Checkers/: EnhancedCheckers.cpp
src/analyzer/Solver/: Z3Solver.cpp
src/analyzer/SymbolicExecution/: Engine.cpp  PathConstraintSolver.cpp
src/core/IR/: CFG.cpp  LLIRModule.cpp
src/core/State/: SymbolicState.cpp
src/frontend/clang/: ClangParser.cpp
src/frontend/libclang/: LibClangParser.cpp
tests/: CMakeLists.txt
tests/integration/buffer-overflow/: test_buffer_overflow.c
tests/integration/integer-overflow/: test_integer_overflow.c
tests/integration/memory-leak/: test_memory_leak.c
tests/integration/null-pointer/: test_null_pointer.c
tools/: cverifier.cpp  test_abstract.cpp  test_clang.cpp  test_z3.cpp
web-ui/: README.md  package.json  tsconfig.json  vite.config.ts
web-ui/public/: index.html
web-ui/src/: App.tsx  main.tsx
web-ui/src/services/: api.ts  websocket.ts
